Closed
Bug 248753
Opened 22 years ago
Closed 22 years ago
popup window creates duplicate window and directs content into wrong one.
Categories
(Core :: DOM: Core & HTML, defect, P2)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla1.8alpha2
People
(Reporter: lohphat, Assigned: jst)
References
()
Details
(4 keywords)
Attachments
(2 files)
|
354 bytes,
text/html
|
Details | |
|
1.74 KB,
patch
|
dveditz
:
review+
darin.moz
:
superreview+
mkaply
:
approval1.7.5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a2) Gecko/20040626
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a2) Gecko/20040626
See below
Reproducible: Always
Steps to Reproduce:
1. Goto URL
2. Select Day in Pictures link on right sidebar
3. Allow popups from site
4. clicking on link creates a properly sized window and another wrong size (full
screen if that's default)
5. Content goes into 2nd window, not the properly sized one.
Actual Results:
Wrong browser window
Expected Results:
Content in proper window, no duped window.
WFM / Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a2) Gecko/20040621
With and without adding the site to the allowed pop-ups list.
Comment 3•22 years ago
|
||
confirming on Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040626
<a href="http://www.sfgate.com/gallery/pod/" target="photos"
onclick="window.open('','photos','directories=no,height=500,width=580,location=no,resizable=yes,screenx=15,screeny=15,toolbar=no,opener=orig')">DIP!</a>
This line loads the image, and, if JS is enabled, creates an empty pop-up.
Comment 4•22 years ago
|
||
wfm on Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a2) Gecko/20040615
Keywords: testcase
Whiteboard: regression between 20040615 and 20040626?
Comment 5•22 years ago
|
||
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040612
Using the testcase, Mozilla shows the bug in my default profile only,
in a fresh created unchanged profile the image rendered in the popup.
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040626
shows the bug with normal and a fresh profile.
Comment 6•22 years ago
|
||
regressed Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040624
BuildID 2004062308 was wfm, 2004062408 regressed.
tested testcase http://bugzilla.mozilla.org/attachment.cgi?id=151784&action=view
using zip builds unzipped in a new directory, using the same new, unchanged profile.
Normal: a popup is created, an image renders therein.
Bug seen with a fresh profile: an empty popup is created, a new window is
created, the page having the size of the popup renders in the new window.
bug seen with my normal profile: an empty popup is created, no new window is
created, the page having the size of the popup renders in the old window.
Keywords: regression
Whiteboard: regression between 20040615 and 20040626? → regression between 2004062308 and 2004062408
Comment 7•22 years ago
|
||
found difference between fresh and normal profile in about:config
browser.block.target_new_window was user set to true, now default false.
1.8a2: 2004062608: creates popup, creates new window, renders in new window.
Branch version with regression date of the trunk version:
1.7: 2004062409: creates popup, creates new window, renders in popup.
maybe from checkin for Bug 246923, trunk patch has been checked in, branch patch
created later, not marked as chekcked in.
Bug 246923 links in nested frame fail, give a false NS_ERROR_DOM_PROP_ACCESS_DENIED
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&date=explicit&mindate=2004-06-23+05%3A00&maxdate=2004-06-24+09%3A00&cvsroot=%2Fcvsroot
Fixing regression bug 246923. Bring back to life the fix for bug 13871, and
improve on the fix for bug 246448. r=dveditz@cruzio.com, sr=darin@meer.net
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&date=explicit&mindate=2004-06-23+10%3A42&maxdate=2004-06-23+10%3A48&cvsroot=%2Fcvsroot
Assignee: general → general
Status: UNCONFIRMED → NEW
Component: Browser-General → DOM: HTML
Ever confirmed: true
QA Contact: general → ian
Comment 8•22 years ago
|
||
confirming Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040628
Firefox/0.8.0+
WFM Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040523 Firefox/0.8.0+
Fix for bug 246923 was checked in 2004-06-23 12:52 AVIARY_1_0_20040515_BRANCH
Comment 9•22 years ago
|
||
wfm Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040524 Firefox/0.8.0+
regressed Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040626
Firefox/0.8.0+
Version from Windows Properties: 1.8a2: 2004052409, 1.8a2: 2004062609
Comment 10•22 years ago
|
||
(In reply to comment #9)
> wfm Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040524
Firefox/0.8.0+
docshell.frameloadcheck.disabled
> Version from Windows Properties: 1.8a2: 2004052409
Don´t know what I tested above, was on another computer running Win98.
This time tested on Win98SE, fresh download from mozilla.org, versions checked
twice:
WFM: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040623 Firefox/0.8.0+
Windows properties/Product version: 1.8a2: 2004062308
Regressed: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040624
Firefox/0.8.0+
Windows properties/Product version: 1.8a2: 2004062408
Comment 11•22 years ago
|
||
regression window: 15 hours, maybe Bug 246923 caused this?
regressed: Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.8a2) Gecko/20040623
that is from tinderbox BuildID 2004062323, so regression window is 15 hours.
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&sortby=Date&date=explicit&mindate=2004-06-23+08%3A00&maxdate=2004-06-23+23%3A00&cvsroot=%2Fcvsroot
Whiteboard: regression between 2004062308 and 2004062408 → regression between 2004062308 and 2004062323
| Assignee | ||
Updated•22 years ago
|
Assignee: general → jst
Flags: blocking1.7.1?
Flags: blocking-aviary1.0?
| Assignee | ||
Comment 12•22 years ago
|
||
| Assignee | ||
Comment 13•22 years ago
|
||
Yes, this was caused by bug 246923. Thanks for tracking this down!
Status: NEW → ASSIGNED
OS: Windows XP → All
Priority: -- → P2
Hardware: PC → All
Target Milestone: --- → mozilla1.8alpha2
| Assignee | ||
Updated•22 years ago
|
Attachment #151943 -
Flags: superreview?(darin)
Attachment #151943 -
Flags: review?(dveditz)
Attachment #151943 -
Flags: approval1.7.1?
Updated•22 years ago
|
Flags: blocking1.7.1?
Flags: blocking1.7.1+
Flags: blocking-aviary1.0?
Flags: blocking-aviary1.0+
Comment 14•22 years ago
|
||
Comment on attachment 151943 [details] [diff] [review]
Always permit loads targeted at *other* toplevel windows.
a=mkaply when the reviews are in
Attachment #151943 -
Flags: approval1.7.1? → approval1.7.1+
Comment 15•22 years ago
|
||
Comment on attachment 151943 [details] [diff] [review]
Always permit loads targeted at *other* toplevel windows.
r=dveditz
Attachment #151943 -
Flags: review?(dveditz) → review+
Comment 16•22 years ago
|
||
Small nit, this can't be blocking 1.7.1 yet since the regression-causing bug
246923 was not checked into the 1.7 branch. It should be though, I just approved
that one so we're in sync w/Aviary
Updated•22 years ago
|
Whiteboard: regression between 2004062308 and 2004062323 → needed-aviary1.0?
Comment 17•22 years ago
|
||
Comment on attachment 151943 [details] [diff] [review]
Always permit loads targeted at *other* toplevel windows.
sr=darin
Attachment #151943 -
Flags: superreview?(darin) → superreview+
| Assignee | ||
Comment 18•22 years ago
|
||
Fix checked in on trunk, and 1.7 and aviary 1.0 branches.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Keywords: fixed-aviary1.0,
fixed1.7
Resolution: --- → FIXED
Whiteboard: needed-aviary1.0?
Comment 19•22 years ago
|
||
*** Bug 249139 has been marked as a duplicate of this bug. ***
Comment 20•22 years ago
|
||
Bug not resolved
1. Go here: http://www.guiolympics.com/skins2004.asp?category=IconPackager
2. Click on any icon package preview image
3. A popup window opens loading the screenshot
4. The previous window however loads the same screenshot aswell, so both popup
and original window both are loading the same image.
Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.7) Gecko/20040630
Firefox/0.9.0+ (New profile, ZIP Build, no extensions or themes installed)
| Assignee | ||
Comment 21•22 years ago
|
||
That has nothing to do with this bug. That site is written for IE only, it
expects that setting event.returnValue=false to prevent the default action of a
link click, and since Mozilla never implemented that proprietary DOM extension,
Mozilla loads the link in the main window, and opens it in a new window.
Comment 22•22 years ago
|
||
Thanks for the info John :)
| Reporter | ||
Comment 23•22 years ago
|
||
WFM 2004063003 win32 (reporter)
| Assignee | ||
Comment 24•22 years ago
|
||
*** Bug 247070 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•