Fixing regression bug 248753. Always permit loads that are targeted at other top-level windows. r=dveditz@cruzio.com, sr=darin@meer.net